<resources>
    <string name="app_name">PayLink</string>
    <string name="email_hint">Enter email</string>
    <string name="password_hint">Enter password</string>
    <string name="login">Login</string>
    <string name="please_wait">Please wait…</string>
    <string name="loading">Loading</string>
    <string name="image_description_sign_out_image">Sign out Image</string>
    <string name="welcome">Welcome</string>
    <string name="transfer">Transfer</string>
    <string name="transaction_history">Transaction History</string>
    <string name="balance">Balance</string>
    <string name="account_number">Account Number</string>
    <string name="account_holder">Account Holder</string>
    <string name="image_description_bank_logo">Bank Logo</string>
    <string name="currency_format">$%1$d</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="proceed">Proceed</string>
    <string name="back">Back</string>
    <string name="amount">Amount</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="transfer_amount">Transfer Amount</string>
    <string name="transfer_from">Transfer From</string>
    <string name="transfer_to">Transfer To</string>
    <string name="balance_0_0">Balance $0.0</string>
    <string name="balance_currency_format">Balance: $%1$.2f</string>
    <string name="close">Close</string>
    <string name="confirm_transfer">Confirm Transfer</string>
    <string name="confirm">Confirm</string>
    <string name="transfer_success">Transaction completed! The amount has been transferred successfully.</string>
    <string name="account_display_format">%1$s - %2$s</string>
    <string name="select_source_account">Select source account</string>
    <string name="select_destination_account">Select destination account</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="source_account">Source Account</string>
    <string name="destination_account">Destination Account</string>
    <string name="instant_transfer">PayLink – Fast. Secure. Seamless.</string>

</resources>