<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.fragments.transfer.TransferFragment">

    <ImageView
        android:id="@+id/back_image_view"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="@dimen/_8dp"
        android:background="@drawable/round_background"
        android:contentDescription="@string/back"
        android:padding="@dimen/_12dp"
        android:src="@drawable/ic_arrow_back"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/textView"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginEnd="@dimen/_8dp"
        android:gravity="center"
        android:text="@string/transfer"
        app:layout_constraintBottom_toBottomOf="@id/back_image_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/back_image_view"
        app:layout_constraintTop_toTopOf="@id/back_image_view" />

    <TextView
        android:id="@+id/transfer_from_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_32dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:text="@string/transfer_from"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_image_view" />

    <TextView
        android:id="@+id/source_account_balance_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_4dp"
        android:text="@string/balance_0_0"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toTopOf="@id/source_account_text_input_layout"
        app:layout_constraintEnd_toEndOf="@+id/source_account_text_input_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/source_account_text_input_layout"
        style="@style/CustomAutoCompleteTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_4dp"
        android:layout_marginEnd="@dimen/_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/transfer_from_label">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/source_account_autocomplete_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:completionThreshold="1"
            android:focusable="true"
            android:inputType="text"
            app:dropDownBackgroundTint="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>


    <ImageView
        android:id="@+id/swap_image_view"
        android:layout_width="@dimen/_48dp"
        android:layout_height="@dimen/_48dp"
        android:layout_marginTop="@dimen/_12dp"
        android:contentDescription="@string/transfer"
        android:src="@drawable/ic_swap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/source_account_text_input_layout" />


    <TextView
        android:id="@+id/transfer_to_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_12dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:text="@string/transfer_to"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swap_image_view" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/destination_account_text_input_layout"
        style="@style/CustomAutoCompleteTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_4dp"
        android:layout_marginEnd="@dimen/_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/transfer_to_label">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/destination_account_autocomplete_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:completionThreshold="1"
            android:focusable="true"
            android:inputType="text"
            app:dropDownBackgroundTint="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/amount_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:text="@string/transfer_amount"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/destination_account_text_input_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/amount_text_input_layout"
        style="@style/CustomTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_4dp"
        android:layout_marginEnd="@dimen/_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/amount_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_amount"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/proceed_action_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16dp"
        android:padding="@dimen/_12dp"
        android:text="@string/proceed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearance="@style/RoundedSquare" />

</androidx.constraintlayout.widget.ConstraintLayout>
